k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: delivery-pipeline
  labels:
    app: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: delivery-pipeline
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: delivery-pipeline
  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: delivery-pipeline
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  sessionAffinity: None
